# gimbal_ros2

./: .gitignore  89-dynamixel.rules  CMakeLists.txt  CODEOWNERS  README.md  package.xml  requirements.txt
config/: default_param.yaml  default_params.yaml
gimbal_control/: setup.cfg  setup.py
gimbal_control/gimbal_control/: gimbal_control_ros2_velocity.py  gimbal_info_subscriber.py
gimbal_control/gimbal_control/2023-12-11-21-11-58/: gimbal_driver-parameter_updates.csv  utl-head_pan_cmd.csv
gimbal_control/gimbal_control/rosbag/: read_gimbal_rosbag.m
gimbal_control/launch/: gimbal_ctrl_pos_mode_launch.py  gimbal_ctrl_vel_mode_launch.py
gimbal_interface/: package.xml
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gimbal_interface/lib/: libgimbal_interface__rosidl_generator_c.dylib  libgimbal_interface__rosidl_generator_py.dylib  libgimbal_interface__rosidl_typesupport_c.dylib  libgimbal_interface__rosidl_typesupport_cpp.dylib  libgimbal_interface__rosidl_typesupport_fastrtps_c.dylib  libgimbal_interface__rosidl_typesupport_fastrtps_cpp.dylib  libgimbal_interface__rosidl_typesupport_introspection_c.dylib  libgimbal_interface__rosidl_typesupport_introspection_cpp.dylib
install/gimbal_interfaces/lib/: libgimbal_interfaces__rosidl_generator_c.dylib  libgimbal_interfaces__rosidl_generator_py.dylib  libgimbal_interfaces__rosidl_typesupport_c.dylib  libgimbal_interfaces__rosidl_typesupport_cpp.dylib  libgimbal_interfaces__rosidl_typesupport_fastrtps_c.dylib  libgimbal_interfaces__rosidl_typesupport_fastrtps_cpp.dylib  libgimbal_interfaces__rosidl_typesupport_introspection_c.dylib  libgimbal_interfaces__rosidl_typesupport_introspection_cpp.dylib
install/tutorial_interfaces/lib/: libtutorial_interfaces__rosidl_generator_c.dylib  libtutorial_interfaces__rosidl_generator_py.dylib  libtutorial_interfaces__rosidl_typesupport_c.dylib  libtutorial_interfaces__rosidl_typesupport_cpp.dylib  libtutorial_interfaces__rosidl_typesupport_fastrtps_c.dylib  (+3 more)
launch/: gimbal_ctrl_pos_mode_launch.py  gimbal_ctrl_vel_mode_launch.py  gimbal_launch.launch.py
log/: latest_build
scripts/: demo_gimbal_motion.py  gimbal_control_ros2_position.py  gimbal_control_ros2_velocity.py  gimbal_driver.py  teleop.py
src/: .gitignore  README.md
src/gimbal_control/: CMakeList.txt  package.xml  setup.py
src/gimbal_control/launch/: gimbal_ctrl_pos_mode.launch.py
src/gimbal_interface/: CMakeLists.txt
(+106 files in other folders)
